app.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  namespace: default
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - name: egress_listener
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 10000
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: egress_http
              codec_type: AUTO
              route_config:
                name: local_route
                virtual_hosts:
                - name: all_hosts
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: dynamic_forward_proxy_cluster
              http_filters:
              - name: envoy.filters.http.dynamic_forward_proxy
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
                  dns_cache_config:
                    name: dynamic_dns_cache
                    dns_lookup_family: V4_ONLY
                    host_ttl: 86400s
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              access_log:
              - name: envoy.access_loggers.file
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  path: /dev/stdout
                  log_format:
                    text_format_source:
                      inline_string: "[%START_TIME%] %REQ(:METHOD)% %REQ(:AUTHORITY)%%REQ(:PATH)% -> %UPSTREAM_HOST% %RESPONSE_CODE%\n"

      clusters:
      - name: dynamic_forward_proxy_cluster
        connect_timeout: 1s
        lb_policy: CLUSTER_PROVIDED
        cluster_type:
          name: envoy.clusters.dynamic_forward_proxy
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
            dns_cache_config:
              name: dynamic_dns_cache   # must match filter
              dns_lookup_family: V4_ONLY
              host_ttl: 86400s          # must match filter

    admin:
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9901

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy:v1.30-latest
        args: ["-c", "/etc/envoy/envoy.yaml"]
        ports:
        - containerPort: 10000  # proxy port
        - containerPort: 9901   # admin / metrics
        volumeMounts:
        - name: envoy-config
          mountPath: /etc/envoy
      volumes:
      - name: envoy-config
        configMap:
          name: envoy-config

---
apiVersion: v1
kind: Service
metadata:
  name: envoy
  namespace: default
spec:
  selector:
    app: envoy
  ports:
  - name: proxy
    port: 10000
    targetPort: 10000
  - name: admin
    port: 9901
    targetPort: 9901
